--- a/list.html
+++ b/list.html
@@ -1,11 +1,17 @@
-<h2>材料</h2>
-<ul>
-  <ul>卵</ul>
-  <li>豆腐</li>
-</ul>
+<dl>
+  <dt>材料</dt>
+</dl>
 
-<h2>手順</h2>
+<ul>
+  <li>卵</li>
+  <li>フライパン</li>
+</ul>
+      
+<dl>
+  <dt>手順</dt>
+</dl>
+      
 <ol>
 <li>卵を割る</li>
-  <li>フライパンで焼く</li>
+<li>フライパンに入れる</li>
 </ol>
